    \itemize{
      \item Visualize predictions via spaghetti 
      plots using argument \code{spaghetti} in
      \code{marginal_effects} and \code{marginal_smooths}.
      \item Introduce method \code{add_ic} to
      store and reuse information criteria in 
      fitted model objects.
      \item Allow for negative weights in 
      multi-membership grouping structures.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Improve sampling efficiency for
      \code{exgaussian} models thanks to
      Alex Forrence.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix an unexpected error in \code{marginal_effects}
      occuring for some models with autocorrelation terms 
      thanks to Markus Gesmann.
    }
  }
}

\section{CHANGES IN VERSION 1.6.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Implement zero-one-inflated beta models
      via family \code{zero_one_inflated_beta}.
      \item Allow for more link functions in 
      zero-inflated and hurdle models.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Ensure full compatibility with 
      \pkg{bayesplot} version 1.2.0.
      \item Deprecate addition argument \code{disp}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix problems when setting priors
      on coefficients of auxiliary parameters 
      when also setting priors on the corresponding
      coefficients of the mean parameter.
      Thanks to Matti Vuorre for reporting this bug.
      \item Allow ordered factors to be used
      as grouping variables thanks to the GitHub
      user itissid.
    }
  }
}

\section{CHANGES IN VERSION 1.6.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit finite mixture models using family
      function \code{mixture}.
      \item Introduce method \code{pp_mixture} to compute
      posterior probabilities of mixture component 
      memberships thanks to a discussion with Stephen Martin.