@@ -4,6 +4,7 @@ S3method(LOO,brmsfit)
 S3method(VarCorr,brmsfit)
 S3method(WAIC,brmsfit)
 S3method(add_ic,brmsfit)
+S3method(as.array,brmsfit)
 S3method(as.data.frame,brmsVarCorr)
 S3method(as.data.frame,brmsfit)
 S3method(as.matrix,brmsfit)
